--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "zod": "^3.22.4",
     "zustand": "^5.0.1"
   },
